--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,4 @@
-Babel==2.9.1
-Django==4.0.5
-Pillow==9.1.1
-Pygments==2.12.0
-Telethon==1.24.0
-aiogram==2.20
-aiohttp==3.8.1
-aiosignal==1.2.0
-amqp==5.1.1
-asgiref==3.5.2
-asttokens==2.0.5
-async-timeout==4.0.2
-attrs==21.4.0
-backports.zoneinfo==0.2.1
-beautifulsoup4==4.11.1
-billiard==3.6.4.0
-celery==5.2.7
-certifi==2022.5.18.1
-charset-normalizer==2.0.12
-click==8.1.3
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.2.0
-colorama==0.4.5
-django-emoji==2.2.2
-django-user-management==18.0.0
-djangorestframework==3.10.3
-elapsed==2020.12.3
-emoji==1.7.0
-et==0.0.2
-et-xmlfile==1.1.0
-executing==0.8.3
-frozenlist==1.3.0
-i==2.1.0
-idna==3.3
-imageio==2.19.3
-incuna-mail==4.1.1
-incuna-pigeon==0.1.0
-kombu==5.2.4
-lib==4.0.0
-multidict==6.0.2
-numpy==1.22.4
-opencv-python==4.6.0.66
-pip==22.1.2
-prompt-toolkit==3.0.29
-psycopg2-binary==2.9.3
-pyaes==1.6.1
-pyasn1==0.4.8
-pytz==2022.1
-requests==2.28.0
-rsa==4.8
-schedule==1.1.0
-setuptools==62.3.3
-six==1.16.0
-soupsieve==2.3.2.post1
-sqlparse==0.4.2
-urllib3==1.26.9
-vine==5.0.0
-wcwidth==0.2.5
-wheel==0.37.1
-yarl==1.7.2
+aiogram~=2.20
+requests~=2.28.0
+pytz~=2022.1
+psycopg2-binary~=2.9.3
